--- a/labs/autotools/project/src/miniserver/Makefile.am
+++ b/labs/autotools/project/src/miniserver/Makefile.am
@@ -1,4 +1,4 @@
 MAINTAINERCLEANFILES = Makefile.in
 
-bin_PROGRAMS = a.out
-a_out_SOURCES = miniserver.c
+bin_PROGRAMS = miniserver
+miniserver_SOURCES = miniserver.c
